@@ -41,7 +41,6 @@ sub new {
 
     my $self = {
         status  => 'unknown',
-        confdir => $params{confdir},
         datadir => $params{datadir},
         libdir  => $params{libdir},
         vardir  => $params{vardir},
@@ -58,7 +57,6 @@ sub init {
 
     # Skip create object if still defined (re-init case)
     my $config = $self->{config} || FusionInventory::Agent::Config->new(
-        confdir => $self->{confdir},
         options => $params{options},
     );
     $self->{config} = $config;
@@ -66,7 +64,7 @@ sub init {
     my $logger = FusionInventory::Agent::Logger->new(config => $config);
     $self->{logger} = $logger;
 
-    $logger->debug("Configuration directory: $self->{confdir}");
+    $logger->debug("Configuration directory: ".$config->confdir());
     $logger->debug("Data directory: $self->{datadir}");
     $logger->debug("Storage directory: $self->{vardir}");
     $logger->debug("Lib directory: $self->{libdir}");
@@ -247,7 +245,6 @@ sub runTaskReal {
 
     my $task = $class->new(
         config       => $self->{config},
-        confdir      => $self->{confdir},
         datadir      => $self->{datadir},
         logger       => $self->{logger},
         target       => $target,
@@ -538,10 +535,6 @@ The constructor. The following parameters are allowed, as keys of the %params
 hash:
 
 =over
-
-=item I<confdir>
-
-the configuration directory.
 
 =item I<datadir>
 
