@@ -82,7 +82,6 @@ cmp_deeply (
 );
 
 $agent->{config} = FusionInventory::Agent::Config->new(
-    confdir => 'etc',
     options => {
         config  => 'none',
         debug   => 1,
@@ -244,7 +243,6 @@ ok (
     || ($tasksExecutionPlan[7] eq 'taskwithoutanumber' && $tasksExecutionPlan[6] eq 'task345')
 );
 
-$agent->{confdir} = 'etc';
 $agent->{datadir} = './share';
 $agent->{vardir}  = './var',
 
